--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "axios": "^1.3.3",
     "element-plus": "^2.1.7",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
